added the zxing version